# dioxus-infinite-test

./: Cargo.toml  Dioxus.toml
assets/: tailwind.css
src/: main.rs
