[package]
name = "dioxus-infinite-test"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = "0.7.0-rc.0"
lipsum = "0.9.1"
dioxus-time = "0.1.0-alpha.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
itertools = "0.14.0"
rand = "0.9.2"
uuid = { version = "1.18.1", features = ["v4", "js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
